# DataLens

./: .gitignore  EXAM.md  README.md  README.zh-CN.md  dev.sh  package-lock.json  release_dmg.sh
.cursor/rules/: 20250113.mdc
apps/desktop/: package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: app.html
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  macos_open.rs  main.rs
apps/desktop/src/lib/: ipc.ts  platform.ts  web_backend.ts
apps/desktop/src/lib/actions/: tooltip.ts
apps/desktop/src/lib/components/: FileTreeNode.svelte  JsonLazyTree.svelte  JsonLazyTreeNode.svelte  JsonTree.svelte  JsonTreePicker.svelte
apps/desktop/src/lib/workers/: text_search.worker.ts
apps/desktop/src/routes/: +page.svelte
core/: Cargo.toml
core/examples/: smoke_full_raw.rs  smoke_open.rs
core/src/: cursor.rs  engine.rs  export.rs  lib.rs  models.rs  search_match.rs  storage.rs  tasks.rs
core/src/formats/: csv.rs  json.rs  lines.rs  mod.rs  parquet.rs
core/tests/: core_flow.rs
deveploer/: main.md
deveploer/paths/: 00-repo-overview.md  10-apps-desktop.md  11-apps-desktop-src.md  12-apps-desktop-src-tauri.md  20-core.md  21-core-src.md  22-core-formats.md  30-test.md  31-dev-sh.md
