[package]
name = "dh_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "dh_core"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
duckdb = { version = "1.4.3", features = ["parquet"] }
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
tempfile = "3.12"
