[package]
name = "datasets-helper-desktop-tauri"
version = "0.0.0"
description = "Datasets Helper Desktop (Tauri shell)"
authors = ["datasets-helper contributors"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dh_core = { path = "../../../core" }
core-foundation = "0.10.1"
once_cell = "1"
objc = "0.2"
cocoa = "0.24"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem.
# DO NOT REMOVE.
custom-protocol = ["tauri/custom-protocol"]

# Silence `#[warn(unexpected_cfgs)]` from older `objc` macros that reference
# `cfg(feature = "cargo-clippy")` at the call site.
# (Rust's `check-cfg` validates feature values against this list.)
cargo-clippy = []

